; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/cxgb3/extr_cxio_hal.c_cxio_allocate_window.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/cxgb3/extr_cxio_hal.c_cxio_allocate_window.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cxio_rdev = type { i32 }

@T3_STAG_UNSET = common dso_local global i32 0, align 4
@TPT_MW = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @cxio_allocate_window(%struct.cxio_rdev* %0, i32* %1, i32 %2) #0 {
  %4 = alloca %struct.cxio_rdev*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store %struct.cxio_rdev* %0, %struct.cxio_rdev** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* @T3_STAG_UNSET, align 4
  %8 = load i32*, i32** %5, align 8
  store i32 %7, i32* %8, align 4
  %9 = load %struct.cxio_rdev*, %struct.cxio_rdev** %4, align 8
  %10 = load i32*, i32** %5, align 8
  %11 = load i32, i32* %6, align 4
  %12 = load i32, i32* @TPT_MW, align 4
  %13 = call i32 @__cxio_tpt_op(%struct.cxio_rdev* %9, i32 0, i32* %10, i32 0, i32 %11, i32 %12, i32 0, i32 0, i64 0, i32 0, i32 0, i32 0, i32 0)
  ret i32 %13
}

declare dso_local i32 @__cxio_tpt_op(%struct.cxio_rdev*, i32, i32*, i32, i32, i32, i32, i32, i64, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
